solve the overflow in responsive hamburger menu

--- a/style.css
+++ b/style.css
@@ -422,8 +422,9 @@ footer ul li:hover{
     display: grid;
     justify-content: center;
     position: absolute;
-    top: 70px;
-    left:1000%;
+    top: -1000%;
+    left:0%;
+    opacity: 0;
     width: 100%;
     text-align: center;
     background-color: white;
@@ -433,6 +434,7 @@ footer ul li:hover{
     box-shadow: -29px 32px 32px -14px rgba(0,0,0,0.75);
     z-index: 99;
     transition: 1s;
+    overflow-x: hidden;
 
   }
 
@@ -450,6 +452,8 @@ footer ul li:hover{
   }
 
   .topbar-menu.active{
+    opacity: 1;
+    top: 70px;
     left: 0%;
     transition: 1s;
   }
@@ -472,6 +476,7 @@ footer ul li:hover{
   }
 
   .topbar-menu ul li{
+    opacity: inherit;
     margin-left: 0;
     margin-bottom: 1.5rem;
   }
